@@ -14,5 +14,5 @@ MSG_NOT_RUNNING=" is not running but have to. Will be restarted. \nDetails: "
 
 * * * * * root  output=$(/sbin/service storm-globus-gridftp status 2>&1); code=$?; [ $code -ne 0 ] && [ $code -ne 3 ] && (echo -e "[`date -R`] storm-globus-gridftp: $MSG_NOT_RUNNING '${output}'" && /sbin/service storm-globus-gridftp restart) | tee -a $LOGFILE | mail -s "StoRM service checker" $MAILTO
 
-* * * * * root  output=$(/sbin/service storm-gridhttps-server status 2>&1); code=$?; [ $code -ne 0 ] && (echo -e "[`date -R`] storm-gridhttps-server: $MSG_NOT_RUNNING '${output}'" && /sbin/service storm-gridhttps-server restart) | tee -a $LOGFILE | mail -s "StoRM service checker" $MAILTO
+* * * * * root  output=$(/sbin/service httpd status 2>&1); code=$?; [ $code -ne 0 ] && [ $code -ne 3 ] && (echo -e "[`date -R`] httpd: $MSG_NOT_RUNNING '${output}'" && /sbin/service httpd restart) | tee -a $LOGFILE | mail -s "StoRM service checker" $MAILTO
 
