@@ -1,0 +1,17 @@
+Listen 2880
+
+Alias / /besfs/
+
+<Location />
+    DAV On
+
+    <Limit GET HEAD OPTIONS REPORT PROPFIND>
+        Allow from all
+        Satisfy any
+    </Limit>
+
+    <Limit MKCOL PUT DELETE LOCK UNLOCK COPY MOVE PROPPATCH>
+        Deny from all
+    </Limit>
+
+</Location>
