@@ -83,15 +83,6 @@ STORM_BE_XMLRPC_TOKEN="???"
 
 GLOBUS_TCP_PORT_RANGE="50000,55000"
 
-STORM_GRIDHTTPS_ENABLED=true
-STORM_GRIDHTTPS_SERVER_USER_UID=gridhttps
-STORM_GRIDHTTPS_SERVER_GROUP_UID=bes
-STORM_INFO_HTTP_SUPPORT=true
-STORM_INFO_HTTPS_SUPPORT=false
-STORM_ANONYMOUS_HTTP_READ=true
-STORM_GRIDHTTPS_HTTP_PORT=2880
-
-
 STORM_BES_ONLINE_SIZE="???"
 STORM_BES_VONAME="bes"
 STORM_BES_DEFAULT_ACL_LIST="bes:RW"
