@@ -18,3 +18,6 @@
 - Added support of GridHTTPs and WebDAV to configuration
 - Storage access rights fixing (for pre-existing storage dir)
 - Default time servers changed to Chineese ones
+
+* Wed Mar 12 2014 Sergey Belov <Sergey.Belov@jinr.ru> 0.1.2-2
+- WebDAV support switched from storm-gridhttps to httpd + mod_dav
